# sweet-async

./: .gitignore  CLAUDE.md  Cargo.toml  FLOWCHART.md  META_TOKIO_PROMPT.md  PROMPT  README.md  ROSETTA_STONE.json  TODO.md  TODOLIST.md  api_bounds.txt  api_bounds_proper.json  api_matches.json  api_tokio_diff.md  api_trait_names.txt  api_trait_names_clean.txt  api_traits.txt  generate_plan.sh  justfile  output.jsonl  simple_trait.yml  tokio_bounds.txt  tokio_matches.json  tokio_trait_names.txt  trait_alignment_plan.md  trait_alignment_plan_final.md  trait_bounds.yml  trait_bounds_query.scm  trait_names.yml  trait_query.scm
api/: Cargo.toml
api/src/: enums.rs  lib.rs  size_ext.rs  syntax_sugar.rs  time_ext.rs
api/src/macros/: __builder_emit_internal.rs  await_final_event.rs  builder.rs  emits.rs  fallback_value.rs  mod.rs  register_task.rs  result_handler.rs  spawn_task.rs
api/src/orchestra/: mod.rs
api/src/orchestra/runtime/: builder.rs  mod.rs  orchestra_runtime.rs
api/src/task/: async_task.rs  builder.rs  cancellable_task.rs  default_context.rs  fallback.rs  memory_usage.rs  message_builder.rs  mod.rs  named_task.rs  recoverable_task.rs  task_communication.rs  task_context.rs  task_error.rs  task_id.rs  task_metrics.rs  task_relationships.rs  task_status.rs  timed_task.rs  tracing_task.rs
api/src/task/emit/: builder.rs  event.rs  mod.rs  sequence.rs  task.rs
api/src/task/spawn/: builder.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs
crates/api/src/api/: mod.rs  orchestra.rs  orchestrator.rs  runtime.rs
crates/api/src/api/task/: async_task.rs  builder.rs  cancellable_task.rs  cpu_usage.rs  io_usage.rs  memory_usage.rs  recoverable_task.rs  task_context.rs  task_error.rs  (+6 more)
crates/api/src/macros/: __builder_emit_internal.rs  __builder_spawn_internal.rs  async_task.rs  await_result.rs  builder.rs  mod.rs  process_stream.rs  register_task.rs  resolves_to.rs  with_dependency.rs
crates/api/src/orchestra/: mod.rs  orchestrator.rs  runtime.rs
crates/api/src/task/: async_task.rs  builder.rs  cancellable_task.rs  distributed_task.rs  encryption.rs  message_builder.rs  mod.rs  named_task.rs  recoverable_task.rs  task_communication.rs  task_context.rs  task_error.rs  task_metrics.rs  task_priority.rs  task_relationships.rs  timed_task.rs  tracing_task.rs
crates/stdrust-task/: Cargo.toml
crates/stdrust-task/src/: lib.rs  main.rs
crates/sweet.async.wiki/: AI-IMAGE-GENERATION.md  Cargo.toml  build.rs  config.toml
crates/sweet.async.wiki/content/docs/: distributed-systems.md
crates/sweet.async.wiki/src/: lib.rs  prompt_templates.rs  prompts.rs
crates/sweet_async/: Cargo.toml
crates/sweet_async/src/: lib.rs
crates/tokio/: Cargo.toml  README.md  TASKLIST.md  TODOLIST.md
crates/tokio-task/: Cargo.toml
crates/tokio-task/src/: lib.rs  main.rs
crates/tokio/examples/: tokio_examples.rs
crates/tokio/plans/: README.md  async_task_completion.md  async_task_completion_pr.md  builder_implementation.md  builder_pattern_pr.md  event_processing_implementation.md  event_processing_pr.md  implementation_overview.md  implementation_roadmap.md  implementation_schedule.md  parent_child_implementation.md  task_chain_implementation.md
crates/tokio/src/: builder.rs  duration_ext.rs  lib.rs  orchestrator.rs  runtime.rs  strategies.rs  task_id_uuid.rs  test_basic_api.rs  test_emit_api.rs  test_full_api.rs  utils.rs
crates/tokio/src/orchestra/: channel_orchestrator.rs  mod.rs  orchestrator.rs  runtime.rs
crates/tokio/src/task/: adaptive.rs  async_task.rs  async_task.rs.broken  async_task.rs.old  async_util.rs  async_work.rs  builder.rs  builder_old_mod.rs  cancellable_task.rs  default_context.rs  distributed_comm.rs  encryption.rs  metrics_aggregation.rs  mod.rs  recoverable_task.rs  task_communication.rs  task_context.rs  task_envelope.rs  timed_task.rs  tokio_task.rs  tracing_task.rs  vector_clock.rs
crates/tokio/tests/: README.md  builder_tests.rs  metrics_aggregation.rs  simple_test.rs  test_basic_api.rs  tokio_tests.rs  vector_clock.rs
crates/tokio/tests/common/: mod.rs
crates/zkp/: Cargo.toml
sweet.async.wiki/: Cargo.toml  SOCIAL-IMAGE-SYSTEM.md
sweet.async.wiki/content/: _index.md
sweet.async.wiki/content/docs/: orchestrator.md
sweet.async.wiki/src/: ai_image_generator.rs
sweet.async.wiki/templates/: base.html
sweet.async.wiki/templates/macros/: social_meta.html
sweet_async/: Cargo.toml
sweet_async/src/: main.rs
tokio/: CLAUDE.md  CONFIGURATION.md  Cargo.toml  TODO.md  TODOLIST.md  TRAIT_ALIGNMENT.md  TRAIT_ALIGNMENT2.md
tokio/examples/: basic_async_task.rs  cancellation_comprehensive.rs  csv.rs  data.csv  readme_example.rs  simple_example.rs  standalone_example.rs  surrealdb.rs
tokio/src/: lib.rs  task_id_uuid.rs  validation_test.rs
tokio/src/orchestra/: builder.rs  channel_orchestrator.rs  execution_stats.rs  mod.rs  orchestra.rs  orchestrator.rs  orchestrator_task.rs  vector_clock.rs
tokio/src/orchestra/runtime/: builder.rs  mod.rs  orchestra_runtime.rs  runtime_trait.rs
tokio/src/task/: adaptive.rs  adaptive_channel.rs  async_task.rs  async_work.rs  builder.rs  cancellable_task.rs  cpu_usage.rs  default_context.rs  error_fallback.rs  fallback.rs  io_usage.rs  memory_usage.rs  message_builder.rs  metrics_aggregation.rs  mod.rs  named_task.rs  prioritized_task.rs  recoverable_task.rs  status_enabled_task.rs  task_communication.rs  task_context.rs  task_error.rs  task_id.rs  task_metrics.rs  task_priority.rs  task_relationships.rs  task_relationships_impl.rs  task_status.rs  timed_task.rs  tokio_task.rs  tracing_task.rs
tokio/src/task/builder/: builder.rs
tokio/src/task/emit/: async_work_wrapper.rs  builder.rs  channel_builder.rs  collector.rs  event.rs  mod.rs  sequence.rs  task.rs  tests.rs
tokio/src/task/relationships/: mod.rs
tokio/src/task/spawn/: builder.rs  into_async_result.rs  mod.rs  result.rs  spawning_task.rs  task.rs  tests.rs
tokio/tests/: await_result_test.rs  runtime_access_test.rs
tokio/tests/task/: named_task_tests.rs  prioritized_task_tests.rs  status_enabled_task_tests.rs
(+150 files in other folders)
