[workspace]
members = ["crates/api", "crates/tokio", "crates/sweet_async"]
resolver = "3"
[workspace.metadata]
authors = ["David Maple <david@cyrup.ai>"]
description = "Async sugar to avoid async_trait and async fn, with a focus on ease of use and ergonomics"
license = "MIT"
repository = "https://github.com/cyrup-ai/sweet_async"

[workspace.dependencies]
tokio = { version = "1.45.0" }
tokio-stream = { version = "0.1.17" }
futures-core = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
lazy_static = { version = "1.5.0" }
thiserror = { version = "2.0.12", features = ["std"] }
tracing = { version = "0.1.41" }
futures = { version = "0.3.31" }
tokio-test = { version = "0.4.4" }
cargo-nextest = { version = "0.9.97-b.2" }
uuid = "1.17.0"
chrono = "0.4.41"
num_cpus = "1.16.0"
rayon = "1.10.0"
rand = "0.8"
crossterm = { version = "0.29" }
ratatui = { version = "0.29" }
clap = { version = "4.5", features = ["derive"] }
sweet_async = { path = "crates/sweet_async" }
sweet_async_api = { path = "crates/api" }
sweet_async_tokio = { path = "crates/tokio" }
tokio-util = { version = "0.7.15", features = ["full"] }
hostname = { version = "0.4" }
# Encryption dependencies
aead = { version = "0.5" }
aes-gcm = { version = "0.10", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
# sweet_async_async_std = { path = "crates/async-std" } # Uncomment when async-std variant is added
