[workspace]
members = [
    "api", "crossbeam",
    "sweet_async",
    "tokio",
]

# Use the new resolver to handle features better
resolver = "2"

# Dependencies shared across workspace members
[workspace.dependencies]
# Core async
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.45.1", features = ["full"] }

# Error handling
thiserror = { version = "2.0", features = ["std"] }

# Utilities
uuid = "1.17"
chrono = "0.4"
lazy_static = "1.5"
tracing = "0.1"
num_cpus = "1.17"
hostname = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Server frameworks
axum = { version = "0.8" }
pingora = { version = "0.5.0" }

# CLI/TUI
clap = { version = "4.5.39", features = ["derive"] }
crossterm = { version = "0.29" }
ratatui = { version = "0.30.0-alpha.4", features = ["serde"] }

# Development
cargo-nextest = "0.9"

# External CYRUP dependencies - paths will be unified through workspace-hack
cryypt_quic = { path = "../cryypt/quic" }
cryypt_cipher = { path = "../cryypt/cipher" }
cryypt_key = { path = "../cryypt/key" }
