[package]
name = "sweet_async_api"
version = "0.1.0"
edition = "2024"
authors = ["David Maple <david@cyrup.ai>"]
description = "Async sugar to simplify async code, primarily for large language models. Key focus on ease of use and ergonomics"
license = "MIT"
repository = "https://github.com/cyrup-ai/sweet_async.git"
documentation = "https://docs.rs/sweet_async"
readme = "README.md"
keywords = ["async", "task", "future", "stream", "concurrency"]
categories = ["asynchronous", "concurrency"]

[package.metadata.docs.rs]
# Enable all features when building documentation
all-features = true
# Use Rust nightly for better documentation features
rustdoc-args = ["--cfg", "docsrs"]
# Document private items as well
rustc-args = ["--document-private-items"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
lazy_static = "1.5"
thiserror = { version = "2.0", features = ["std"] }
tracing = "0.1"
futures = "0.3"
uuid = "1.17"
chrono = "0.4"
num_cpus = "1.17"
hostname = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "macros", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8", optional = true }
pingora = { version = "0.5.0", optional = true }
cryypt_cipher = { optional = true, path = "../../cryypt/cipher"}
cryypt_key = { optional = true, path = "../../cryypt/key"}
cryypt_quic = { optional = true, path = "../../cryypt/quic"}

[features]
default = []

server = ["dep:pingora", "axum"]
quic = ["dep:cryypt_quic"]
cryypt = ["dep:cryypt_cipher", "dep:cryypt_key", "dep:cryypt_quic"]

[dev-dependencies]
cargo-nextest = "0.9"
futures = "0.3"

[lib]
name = "sweet_async_api"
path = "src/lib.rs"
