[package]
name = "sweet_async_tokio"
version = "0.1.0"
edition = "2024"
authors = ["David Maple <david@cyrup.ai>"]
description = "Tokio implementation for the Sweet Async library"
license = "MIT"
repository = "https://github.com/cyrup-ai/sweet_async.git"
documentation = "https://docs.rs/sweet_async_tokio"
readme = "README.md"
keywords = ["async", "task", "tokio", "future", "concurrency"]
categories = ["asynchronous", "concurrency"]

[package.metadata.docs.rs]
# Enable all features when building documentation
all-features = true
# Use Rust nightly for better documentation features
rustdoc-args = ["--cfg", "docsrs"]
# Document private items as well
rustc-args = ["--document-private-items"]

[dependencies]
sweet_async_api = { path  = "../api"}
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
lazy_static = "1.5.0"
thiserror = { version = "2.0.12" }
tracing = "0.1"
num_cpus = "1.17.0"
rayon = "1.10.0"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.2"
tokio-util = "0.7"
hostname = "0.4.1"
bincode = "2.0.1"
serde_json = "1.0"
dashmap = "6.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
cryypt_cipher = { optional = true, path = "../../cryypt/cipher"}
cryypt_key = { optional = true, path = "../../cryypt/key"}
cryypt_quic = { optional = true, path = "../../cryypt/quic"}
# SurrealDB dependencies - conditional on feature gates
surrealdb = { version = "2.1", optional = true, default-features = false }
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam-utils = "0.8"

[features]
default = []
# Enable encryption support for task communication
encryption = ["cryypt_cipher", "cryypt_key", "cryypt_quic"]
# Enable metrics collection
metrics = []
# Enable distributed task support with vector clocks
distributed = []
# Enable zero-knowledge proof support
zk = []
# Enable SurrealDB WebSocket streaming support
surrealdb-ws = ["surrealdb/protocol-ws", "surrealdb/protocol-http"]
# Enable SurrealDB local KV storage support  
surrealdb-kv = ["surrealdb/kv-surrealkv"]

[dev-dependencies]
tokio-test = "0.4"
cargo-nextest = "0.9"

[lib]
name = "sweet_async_tokio"
path = "src/lib.rs"
