[package]
name = "sweet_async_api"
version = "0.1.0"
edition = "2024"
authors = ["David Maple <david@cyrup.ai>"]
description = "Async sugar to simplify async code, primarily for large language models. Key focus on ease of use and ergonomics"
license = "MIT"
repository = "https://github.com/cyrup-ai/sweet_async.git"
workspace = "../../"
documentation = "https://docs.rs/sweet_async"
readme = "README.md"
keywords = ["async", "task", "future", "stream", "concurrency"]
categories = ["asynchronous", "concurrency"]

[package.metadata.docs.rs]
# Enable all features when building documentation
all-features = true
# Use Rust nightly for better documentation features
rustdoc-args = ["--cfg", "docsrs"]
# Document private items as well
rustc-args = ["--document-private-items"]

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
cargo-nextest = { workspace = true }
futures = { workspace = true }

[lib]
name = "sweet_async_api"
path = "src/lib.rs"
