[package]
name = "sweet-async-wiki"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.5.0"
replicate-rust = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
reqwest = { version = "0.11", features = ["json"] }
image = "0.25"
chrono = "0.4"
tera = "1.19"
once_cell = "1.19"

[build-dependencies]
image = "0.25"
toml = "0.8"
walkdir = "2"
serde_json = "1"
glob = "0.3"
urlencoding = "2"

[lib]
name = "sweet_async_wiki"
path = "src/lib.rs"

[[bin]]
name = "generate-ai-images"
path = "src/bin/generate-ai-images.rs"