[package]
name = "sweet_async"
version = "0.1.0"
edition = "2024"
# publish = true

# Features
tokio = ["dep:sweet_async_tokio", "dep:tokio"]
default = ["tokio"]
# std = ["dep:sweet_async_std"] # For future

[dependencies]
sweet_async_api = { path = "../api" }
sweet_async_tokio = { path = "../tokio", optional = true }
tokio = { workspace = true, optional = true }