[package]
name = "sweet_async_tokio"
version = "0.1.0"
edition = "2024"
authors = ["David Maple <david@cyrup.ai>"]
description = "Tokio implementation for the Sweet Async library"
license = "MIT"
repository = "https://github.com/cyrup-ai/sweet_async.git"
workspace = "../../"
documentation = "https://docs.rs/sweet_async_tokio"
readme = "README.md"
keywords = ["async", "task", "tokio", "future", "concurrency"]
categories = ["asynchronous", "concurrency"]

[package.metadata.docs.rs]
# Enable all features when building documentation
all-features = true
# Use Rust nightly for better documentation features
rustdoc-args = ["--cfg", "docsrs"]
# Document private items as well
rustc-args = ["--document-private-items"]

[dependencies]
sweet_async_api = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
tokio-util = { workspace = true }
hostname = { workspace = true }
# Encryption dependencies (optional)
aead = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[features]
default = []
# Enable encryption support for task communication
encryption = ["aead", "aes-gcm", "chacha20poly1305", "zeroize", "sweet_async_api/encryption"]

[dev-dependencies]
tokio-test = { workspace = true }
cargo-nextest = { workspace = true }

[lib]
name = "sweet_async_tokio"
path = "src/lib.rs"
